# svara

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  project.md  tailwind.config.ts  vite.config.ts
scripts/: tauri.mjs
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  history.rs  inject.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/transcribe/: groq.rs  local.rs  mod.rs
src/components/: ApiKeyInput.tsx  HistoryItem.tsx  HotkeyRecorder.tsx  ModelDownloader.tsx  ToggleBackend.tsx
src/hooks/: useTauriEvents.ts
src/lib/: tauri.ts
src/store/: useAppStore.ts
src/styles/: globals.css
src/windows/: History.tsx  Settings.tsx  Status.tsx
