[package]
name = "svara"
version = "0.1.0"
description = "Privacy-first voice transcription tray app"
authors = ["Virat Mankali"]
license = "MIT"
repository = "https://github.com/virat-mankali/svara"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "svara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = []
local-whisper = ["dep:whisper-rs"]

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dirs = "6"
futures-util = "0.3"
hound = "3.5"
log = "0.4"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
rubato = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
whisper-rs = { version = "0.11", features = ["metal"], optional = true }
